--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
       </div>
 
       <p class="register">
-        Don’t have an account? <a href="#">Register here</a>
+        Dont have an account? <a href="#">Register here</a>
       </p>
 
     </div>
@@ -69,6 +69,8 @@
  
 
   </section>
+
+   
   <!--Dashboard section-->
 
  <section id="dashboardSection" class="hidden dashboard">
@@ -92,7 +94,7 @@
 
     <!-- SIDEBAR -->
     <aside class="sidebar">
-  <a class="active" onclick="showSection('overview')">
+  <a onclick="showSection('overview')" class="active">
     <i class="fa-solid fa-border-all"></i> Overview
   </a>
 
@@ -100,10 +102,19 @@
     <i class="fa-solid fa-seedling"></i> My Crops
   </a>
 
-  <a><i class="fa-solid fa-file-circle-check"></i> Export Readiness</a>
-  <a><i class="fa-solid fa-chart-line"></i> Market Prices</a>
-  <a><i class="fa-solid fa-user-group"></i> Buyer Enquiries</a>
+  <a onclick="showSection('exportReadiness')">
+    <i class="fa-solid fa-file-circle-check"></i> Export Readiness
+  </a>
+
+  <a onclick="showSection('marketPrices')">
+    <i class="fa-solid fa-chart-line"></i> Market Prices
+  </a>
+
+  <a onclick="showSection('buyerEnquiries')">
+    <i class="fa-solid fa-user-group"></i> Buyer Enquiries
+  </a>
 </aside>
+
 
 
     <!-- MAIN -->
@@ -149,25 +160,24 @@
         <h2>Quick Actions</h2>
         <p>Get started with essential tasks</p>
 
-        <div class="action-grid">
-          <div class="action-card">
-            <i class="fa-solid fa-seedling"></i>
-            <h3>Add New Crop</h3>
-            <span>List your produce</span>
-          </div>
+       <div class="action-card" onclick="goToMyCrops()">
+  <i class="fa-solid fa-seedling"></i>
+  <h3>Add New Crop</h3>
+  <span>List your produce</span>
+</div>
 
-          <div class="action-card">
-            <i class="fa-solid fa-file-circle-check"></i>
-            <h3>Check Readiness</h3>
-            <span>Complete checklist</span>
-          </div>
+<div class="action-card" onclick="showSection('exportReadiness')">
+  <i class="fa-solid fa-file-circle-check"></i>
+  <h3>Check Readiness</h3>
+  <span>Complete checklist</span>
+</div>
 
-          <div class="action-card">
-            <i class="fa-solid fa-chart-line"></i>
-            <h3>View Prices</h3>
-            <span>Track market rates</span>
-          </div>
-        </div>
+<div class="action-card" onclick="showSection('marketPrices')">
+  <i class="fa-solid fa-chart-line"></i>
+  <h3>View Prices</h3>
+  <span>Track market rates</span>
+</div>
+
       </div>
     
       <!-- ===== LOWER DASHBOARD SECTION ===== -->
@@ -247,83 +257,326 @@
 
 <div id="myCropsSection" class="dashboard-section hidden">
 
+  <!-- PAGE HEADER -->
   <div class="page-header">
     <div>
       <h1>My Crops</h1>
       <p>Manage your crop inventory</p>
     </div>
 
-    <button class="add-btn">
-      <i class="fa-solid fa-plus"></i> Add New Crop
-    </button>
+    <button class="add-btn" onclick="showAddCrop()">
+  <i class="fa-solid fa-plus"></i> Add New Crop
+</button>
+
   </div>
 
+  <!-- ADD NEW CROP FORM -->
+<div id="addCropForm" class="add-crop-card hidden">
+
+  <h3>Add New Crop</h3>
+
+  <div class="add-crop-grid">
+    <input type="text" id="cropName" placeholder="Crop Name">
+    <input type="number" id="cropQty" placeholder="Quantity (kg)">
+
+    <select id="cropStatus">
+      <option value="Ready">Ready</option>
+      <option value="Growing">Growing</option>
+    </select>
+  </div>
+
+  <div class="add-crop-actions">
+    <button class="btn edit" onclick="addCrop()">Add Crop</button>
+    <button class="btn remove" onclick="hideAddCrop()">Cancel</button>
+  </div>
+
+</div>
+
+  <!-- CROPS GRID -->
   <div class="crops-grid">
 
-    <!-- CROP CARD -->
+    <!-- ORGANIC TOMATOES -->
     <div class="crop-card">
-      <div class="crop-icon">🍅</div>
-      <h3>Organic Tomatoes</h3>
+      <div class="crop-image">🍅</div>
+      <h3 class="crop-title">Organic Tomatoes</h3>
 
-      <p>Quantity: <strong>500 kg</strong></p>
-      <p>Market Price: <span class="price">$2.5/kg</span></p>
-      <p>Status: <span class="status ready">Ready</span></p>
+      <div class="crop-row">
+        <span>Quantity:</span>
+        <strong>500 kg</strong>
+      </div>
 
-      <div class="actions">
-        <button class="edit">Edit</button>
-        <button class="remove">Remove</button>
+      <div class="crop-row">
+        <span>Market Price:</span>
+        <strong class="price">$2.5/kg</strong>
+      </div>
+
+      <div class="crop-row">
+        <span>Status:</span>
+        <span class="status ready">Ready</span>
+      </div>
+
+      <div class="crop-actions">
+        <button class="btn edit">Edit</button>
+        <button class="btn remove">Remove</button>
       </div>
     </div>
 
+    <!-- BASMATI RICE -->
     <div class="crop-card">
-      <div class="crop-icon">🌾</div>
-      <h3>Basmati Rice</h3>
+      <div class="crop-image">🌾</div>
+      <h3 class="crop-title">Basmati Rice</h3>
 
-      <p>Quantity: <strong>2000 kg</strong></p>
-      <p>Market Price: <span class="price">$1.8/kg</span></p>
-      <p>Status: <span class="status growing">Growing</span></p>
+      <div class="crop-row">
+        <span>Quantity:</span>
+        <strong>2000 kg</strong>
+      </div>
 
-      <div class="actions">
-        <button class="edit">Edit</button>
-        <button class="remove">Remove</button>
+      <div class="crop-row">
+        <span>Market Price:</span>
+        <strong class="price">$1.8/kg</strong>
+      </div>
+
+      <div class="crop-row">
+        <span>Status:</span>
+        <span class="status growing">Growing</span>
+      </div>
+
+      <div class="crop-actions">
+        <button class="btn edit">Edit</button>
+        <button class="btn remove">Remove</button>
       </div>
     </div>
 
+    <!-- BELL PEPPERS -->
     <div class="crop-card">
-      <div class="crop-icon">🫑</div>
-      <h3>Bell Peppers</h3>
+      <div class="crop-image">🫑</div>
+      <h3 class="crop-title">Bell Peppers</h3>
 
-      <p>Quantity: <strong>300 kg</strong></p>
-      <p>Market Price: <span class="price">$3.2/kg</span></p>
-      <p>Status: <span class="status ready">Ready</span></p>
+      <div class="crop-row">
+        <span>Quantity:</span>
+        <strong>300 kg</strong>
+      </div>
 
-      <div class="actions">
-        <button class="edit">Edit</button>
-        <button class="remove">Remove</button>
+      <div class="crop-row">
+        <span>Market Price:</span>
+        <strong class="price">$3.2/kg</strong>
+      </div>
+
+      <div class="crop-row">
+        <span>Status:</span>
+        <span class="status ready">Ready</span>
+      </div>
+
+      <div class="crop-actions">
+        <button class="btn edit">Edit</button>
+        <button class="btn remove">Remove</button>
       </div>
     </div>
 
+    <!-- ORGANIC SPINACH -->
     <div class="crop-card">
-      <div class="crop-icon">🥬</div>
-      <h3>Organic Spinach</h3>
+      <div class="crop-image">🥬</div>
+      <h3 class="crop-title">Organic Spinach</h3>
 
-      <p>Quantity: <strong>150 kg</strong></p>
-      <p>Market Price: <span class="price">$4.0/kg</span></p>
-      <p>Status: <span class="status ready">Ready</span></p>
+      <div class="crop-row">
+        <span>Quantity:</span>
+        <strong>150 kg</strong>
+      </div>
 
-      <div class="actions">
-        <button class="edit">Edit</button>
-        <button class="remove">Remove</button>
+      <div class="crop-row">
+        <span>Market Price:</span>
+        <strong class="price">$4.0/kg</strong>
+      </div>
+
+      <div class="crop-row">
+        <span>Status:</span>
+        <span class="status ready">Ready</span>
+      </div>
+
+      <div class="crop-actions">
+        <button class="btn edit">Edit</button>
+        <button class="btn remove">Remove</button>
       </div>
     </div>
 
   </div>
 </div>
 
+<!--Export readness -->
 
-    </main>
+<div id="exportReadinessSection" class="dashboard-section hidden">
+
+  <h1>Export Readiness Assessment</h1>
+  <p>Complete these requirements to start exporting</p>
+
+  <!-- SCORE CARD -->
+  <div class="readiness-score">
+    <div>
+      <h2>Your Readiness Score</h2>
+      <p>Keep going! You're almost ready to export.</p>
+    </div>
+    <div class="score">
+      <h1>70%</h1>
+      <span>7 of 10 items</span>
+    </div>
+    <div class="progress-bar">
+      <div class="progress-fill"></div>
+    </div>
+  </div>
+
+  <!-- DOCUMENTATION -->
+  <div class="readiness-card">
+    <div class="card-header">
+      <h3>Documentation</h3>
+      <span>3/4 Completed</span>
+    </div>
+
+    <div class="item done">✔ Business Registration</div>
+    <div class="item done">✔ Export License</div>
+    <div class="item pending">
+      ⏳ Phytosanitary Certificate
+      <button class="complete-btn">Complete</button>
+    </div>
+    <div class="item done">✔ Quality Certificates</div>
+  </div>
+
+  <!-- INFRASTRUCTURE -->
+  <div class="readiness-card">
+    <div class="card-header">
+      <h3>Infrastructure</h3>
+      <span>2/3 Completed</span>
+    </div>
+
+    <div class="item done">✔ Cold Storage Facility</div>
+    <div class="item done">✔ Packaging Equipment</div>
+    <div class="item pending">
+      ⏳ Transport Arrangement
+      <button class="complete-btn">Complete</button>
+    </div>
+  </div>
+
+  <!-- COMPLIANCE -->
+  <div class="readiness-card">
+    <div class="card-header">
+      <h3>Compliance</h3>
+      <span>2/3 Completed</span>
+    </div>
+
+    <div class="item done">✔ Organic Certification</div>
+    <div class="item done">✔ GAP Certification</div>
+    <div class="item pending">
+      ⏳ HACCP Compliance
+      <button class="complete-btn">Complete</button>
+    </div>
+  </div>
+
+</div>
+
+<!--Market price -->
+
+<div id="marketPricesSection" class="dashboard-section hidden">
+
+  <h1>International Market Prices</h1>
+  <p>Track real-time prices across global markets</p>
+
+  <!-- MARKET SUMMARY -->
+  <div class="stats">
+    <div class="stat-card">
+      <h3>USA Market</h3>
+      <h2>$2,900</h2>
+      <span class="green-text">↑ 12.5%</span>
+    </div>
+    <div class="stat-card">
+      <h3>UK Market</h3>
+      <h2>$2,600</h2>
+      <span class="green-text">↑ 8.3%</span>
+    </div>
+    <div class="stat-card">
+      <h3>UAE Market</h3>
+      <h2>$2,700</h2>
+      <span class="green-text">↑ 10.1%</span>
+    </div>
+    <div class="stat-card">
+      <h3>India Market</h3>
+      <h2>$2,300</h2>
+      <span class="green-text">↑ 15.0%</span>
+    </div>
+  </div>
+
+  <!-- LINE CHART -->
+  <div class="card-box">
+    <h3>Price Trends (Last 6 Months)</h3>
+    <canvas id="priceTrendChart" height="120"></canvas>
+  </div>
+
+  <!-- BAR CHART -->
+  <div class="card-box">
+    <h3>Local vs Export Price Comparison</h3>
+    <canvas id="priceCompareChart" height="120"></canvas>
+  </div>
+
+</div>
+
+
+<!--Buyers Enquires-->
+
+<div id="buyerEnquiriesSection" class="dashboard-section hidden">
+
+  <h1>Buyer Enquiries</h1>
+  <p>Manage enquiries from international buyers</p>
+
+  <div class="card-box">
+    <table class="enquiry-table">
+      <thead>
+        <tr>
+          <th>Buyer</th>
+          <th>Country</th>
+          <th>Crop Requested</th>
+          <th>Quantity</th>
+          <th>Date</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Fresh Imports Ltd.</td>
+          <td>USA</td>
+          <td>Organic Tomatoes</td>
+          <td>1000 kg</td>
+          <td>2 days ago</td>
+          <td><button class="respond-btn">Respond</button></td>
+        </tr>
+        <tr>
+          <td>European Foods</td>
+          <td>UK</td>
+          <td>Basmati Rice</td>
+          <td>5000 kg</td>
+          <td>5 days ago</td>
+          <td><button class="respond-btn">Respond</button></td>
+        </tr>
+        <tr>
+          <td>Middle East Trading</td>
+          <td>UAE</td>
+          <td>Bell Peppers</td>
+          <td>500 kg</td>
+          <td>1 week ago</td>
+          <td><button class="respond-btn">Respond</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+</div>
+
+
+
+ </main>   
    </div>
+   
    </section>
+  
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
  <!-- Login JS -->
   <script src="js/login.js"></script>
