--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
       <a href="#features">Features</a>
       <a href="#how">How It Works</a>
       <a href="#">Pricing</a>
+      <a href="shipmentinfo.html">Shipment Info</a>
       <a href="login.html" class="signin">Sign In</a>
     </nav>
   </div>
