--- a/shipmentinfo.html
+++ b/shipmentinfo.html
@@ -14,7 +14,7 @@
         <div class="logo">AgroExport</div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="shipment-info.html">Shipment Info</a>
+            <a href="shipmentinfo.html">Shipment Info</a>
             <a href="login.html" class="btn">Login</a>
         </nav>
     </header>
