build farmer registration page

--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,10 @@
       </p>
 
       <div class="hero-buttons">
-        <button class="btn primary">Register as Farmer →</button>
+        <a href="farmer-registration.html">
+  <button class="btn primary">Register as a Farmer</button>
+</a>
+
         <button class="btn secondary">Register as Buyer 🛒</button>
       </div>
     </div>
