--- a/Index.html
+++ b/Index.html
@@ -45,8 +45,9 @@
         <a href="farmer-registration.html">
   <button class="btn primary">Register as a Farmer</button>
 </a>
-
+        <a href="buyer-registation.html">
         <button class="btn secondary">Register as Buyer 🛒</button>
+</a>
       </div>
     </div>
 
