--- a/buyer-dashboard.html
+++ b/buyer-dashboard.html
@@ -20,7 +20,7 @@
       <strong>Yash Phadol</strong><br>
       <small>Buyer Account</small>
     </div>
-    <a href="#">Logout</a>
+    <a href="buyer-registation.html">Logout</a>
   </div>
 </header>
 
