build about us,contact,privacy page

--- a/Index.html
+++ b/Index.html
@@ -222,9 +222,9 @@
 
     <div>
       <h4>Company</h4>
-      <a>About Us</a>
-      <a>Contact</a>
-      <a>Privacy Policy</a>
+      <a href="about-us.html">About Us</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
     </div>
   </div>
 
