--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   </p>
 </section>
 
-<!-- ===== CONTACT INFO CARDS ===== -->
+<!-- ==== CONTACT INFO CARDS ==== -->
 <section class="info-cards">
   <div class="info-card">
     <div class="icon green">✉️</div>
