--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
   </section>
 
    
-  <!--Dashboard section-->
+  <!--farmer Dashboard section-->
 
  <section id="dashboardSection" class="hidden dashboard">
 
