--- a/Index.html
+++ b/Index.html
@@ -229,7 +229,7 @@
   </div>
 
   <p class="copyright">
-    © 2026 AgroExport Connect 
+    © 2026 AgroExport Connect | Final Year Engineering Project
   </p>
 </footer>
 
