--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
       <a href="#how">How It Works</a>
       <a href="#">Pricing</a>
       <a href="shipmentinfo.html">Shipment Info</a>
-      <a href="login.html" class="signin">Sign In</a>
+      <a href="select-role.html" class="signin">Sign In</a>
     </nav>
   </div>
 </header>
