--- a/farmerlogin.html
+++ b/farmerlogin.html
@@ -60,7 +60,7 @@
       </div>
 
       <p class="register">
-        Dont have an account? <a href="#">Register here</a>
+        Dont have an account? <a href="farmerlogin.html">Register here</a>
       </p>
 
     </div>
