--- a/select-role.html
+++ b/select-role.html
@@ -45,11 +45,11 @@
     <h2>Select Account Type</h2>
     <p>Continue as Buyer or Farmer</p>
 
-    <a href="">
+    <a href="buyerlogin.html">
       <button class="buyer">Buyer Login</button>
     </a>
 
-    <a href="login.html">
+    <a href="farmerlogin.html">
       <button class="farmer">Farmer Login</button>
     </a>
   </div>
