--- a/buyerlogin.html
+++ b/buyerlogin.html
@@ -60,7 +60,7 @@
       </div>
 
       <p class="register">
-        Dont have an account? <a href="#">Register here</a>
+        Dont have an account? <a href="buyer-registation.html">Register here</a>
       </p>
 
     </div>
