--- a/farmer-dashboard.html
+++ b/farmer-dashboard.html
@@ -595,22 +595,12 @@
 
 
 </div>
-
-
-
-
-
-
  </main>  
    </div>
    
    </section>
  
-   <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
-
-
-
-
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
  <!-- Login JS -->
     <script src="js/login.js"></script>
 </body>
