--- a/Index.html
+++ b/Index.html
@@ -193,8 +193,8 @@
   <p>Join thousands of farmers exporting internationally</p>
 
   <div class="cta-buttons">
-    <button class="btn white">Get Started Now →</button>
-    <button class="btn dark">Watch Demo</button>
+    <a class="btn white" href="select-role.html">Get Started Now →</a>
+    <a class="btn dark" href="https://youtu.be/NWg38xWYzEg?si=kaW6muUHceZO9lmt">Watch Demo</a>
   </div>
 </section>
 
