--- a/farmer-dashboard.html
+++ b/farmer-dashboard.html
@@ -26,7 +26,7 @@
 
     <div class="user">
       <div class="user-info">
-        <strong id="userName">yashphadol5</strong>
+        <strong id="userName"></strong>
         <span>Farmer Account</span>
       </div>
       <button onclick="logout()">Logout</button>
@@ -75,7 +75,7 @@
 
 
       <h1>Dashboard Overview</h1>
-      <p class="welcome">Welcome back, <span id="welcomeUser">yashphadol5</span>!</p>
+      <p class="welcome">Welcome back <span id="welcomeUser"></span>!</p>
 
 
       <!-- STATS -->
