--- a/farmer-dashboard.html
+++ b/farmer-dashboard.html
@@ -603,5 +603,6 @@
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
  <!-- Login JS -->
     <script src="js/login.js"></script>
+    <script src="js/farmer-dashboard.js"></script>
 </body>
 </html>
