--- a/farmer-registration.html
+++ b/farmer-registration.html
@@ -118,7 +118,7 @@
 
       <p class="register">
         Already have an account?
-        <a href="login.html">Sign in here</a>
+        <a href="select-role.html">Sign in here</a>
       </p>
 
     </div>
