--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="#features">Features</a>
       <a href="#how">How It Works</a>
-      <a href="#">Pricing</a>
+      <a href="agent-info.html">Export Agents</a>
       <a href="shipmentinfo.html">Shipment Info</a>
       <a href="select-role.html" class="signin">Sign In</a>
     </nav>
