--- a/buyerlogin.html
+++ b/buyerlogin.html
@@ -33,7 +33,7 @@
         <label>Email Address</label>
         <div class="input-group">
           <i class="fa-regular fa-envelope"></i>
-          <input type="email" placeholder="farmer@example.com" required>
+          <input type="email" placeholder="buyer@example.com" required>
         </div>
 
         <label>Password</label>
@@ -60,12 +60,12 @@
       </div>
 
       <p class="register">
-        Dont have an account? <a href="buyer-registation.html">Register here</a>
+        Don't have an account? <a href="buyer-registation.html">Register here</a>
       </p>
 
     </div>
   </div>
   </section>
-  <script src="js/login.js"></script>
+  <script src="js/buyerlogin.js"></script>
 </body>
 </html>
