--- a/buyer-dashboard.html
+++ b/buyer-dashboard.html
@@ -17,7 +17,7 @@
 
   <div class="user">
     <div>
-      <strong>Yash Phadol</strong><br>
+      <strong>yash</strong><br>
       <small>Buyer Account</small>
     </div>
     <a href="buyer-registation.html">Logout</a>
