--- a/select-role.html
+++ b/select-role.html
@@ -3,56 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <title>Select Role</title>
+
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", Arial, sans-serif;
+    }
+
     body {
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #f4f6fb;
-      font-family: Arial;
+      background: linear-gradient(135deg, #eef2ff, #f8fafc);
     }
+
     .box {
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      background: #ffffff;
+      padding: 40px 35px;
+      border-radius: 16px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.12);
       text-align: center;
-      width: 350px;
+      width: 360px;
+      animation: fadeUp 0.6s ease;
     }
+
+    h2 {
+      font-size: 24px;
+      margin-bottom: 8px;
+      color: #1e293b;
+    }
+
+    p {
+      font-size: 14px;
+      color: #64748b;
+      margin-bottom: 25px;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
     button {
       width: 100%;
-      padding: 12px;
-      margin-top: 15px;
+      padding: 14px;
+      margin-top: 14px;
       font-size: 16px;
+      font-weight: 600;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
+      transition: all 0.25s ease;
     }
+
     .buyer {
-      background: #1e5bff;
+      background: linear-gradient(135deg, #2563eb, #1e40af);
       color: #fff;
     }
+
+    .buyer:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 25px rgba(37, 99, 235, 0.35);
+    }
+
     .farmer {
-      background: #16a34a;
+      background: linear-gradient(135deg, #16a34a, #15803d);
       color: #fff;
+    }
+
+    .farmer:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 25px rgba(22, 163, 74, 0.35);
+    }
+
+    @keyframes fadeUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
+
 <body>
-<section>
-  <div class="box">
-    <h2>Select Account Type</h2>
-    <p>Continue as Buyer or Farmer</p>
+  <section>
+    <div class="box">
+      <h2>Select Account Type</h2>
+      <p>Continue as Buyer or Farmer</p>
 
-    <a href="buyerlogin.html">
-      <button class="buyer">Buyer Login</button>
-    </a>
+      <a href="buyerlogin.html">
+        <button class="buyer">Buyer Login</button>
+      </a>
 
-    <a href="farmerlogin.html">
-      <button class="farmer">Farmer Login</button>
-    </a>
-  </div>
-</section>
+      <a href="farmerlogin.html">
+        <button class="farmer">Farmer Login</button>
+      </a>
+    </div>
+  </section>
 </body>
 </html>
